Overflow fixed

--- a/src/Components/FormModal/FormModal.module.css
+++ b/src/Components/FormModal/FormModal.module.css
@@ -1,5 +1,6 @@
 .modalBorder{
     border: transparent;
+    max-width: 85%;
 }
 .modalHeader{
     background-color: #17a2b8;
